--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,1 +1,5 @@
+1.3.0 
+    - Added memory efficient version of MetaNeighbor and MetaNeighborUS
+    - Added supporting functions for memory efficient versions
+1.2.0 No updates!
 1.1.0 Updated topHits to evaluate with tied ROC values
